--- a/.gitignore
+++ b/.gitignore
@@ -24,5 +24,26 @@
 *.synctex.gz
 *.fls
 *.fdb_latexmk
-# Erlang
+
+#Rebar/Erlang
+.rebar3
+_*
+.eunit
+*.o
 *.beam
+*.plt
+*.swp
+*.swo
+.erlang.cookie
+ebin
+log
+erl_crash.dump
+.rebar
+logs
+_build
+.idea
+rebar3.crashdump
+
+#Stupid Apple
+*.icloud
+
