--- a/elevator_driver/rebar.config
+++ b/elevator_driver/rebar.config
@@ -2,8 +2,10 @@
 {deps, []}.
 
 {pre_hooks,
-  [{"(linux|darwin|solaris)", compile, "make -C c_src"},
+  [{"(linux|solaris)", compile, "make -C c_src"},
+   {"(darwin)", compile, "make -C simulator"},
    {"(freebsd)", compile, "gmake -C c_src"}]}.
 {post_hooks,
-  [{"(linux|darwin|solaris)", clean, "make -C c_src clean"},
+  [{"(linux|solaris)", clean, "make -C c_src clean"},
+   {"(darwin)", clean, "make -C simulator clean"},
    {"(freebsd)", clean, "gmake -C c_src clean"}]}.
