fixed compiling issues on linux, changed from maps to records in env_ctrl

--- a/elevator_driver/c_src/Makefile
+++ b/elevator_driver/c_src/Makefile
@@ -27,7 +27,7 @@ else ifeq ($(UNAME_SYS), FreeBSD)
 	CXXFLAGS ?= -O3 -finline-functions -Wall
 else ifeq ($(UNAME_SYS), Linux)
 	CC ?= gcc
-	CFLAGS ?= -O3 -std=c11 -finline-functions -Wall -Wmissing-prototypes
+	CFLAGS ?= -O3 -std=gnu11 -finline-functions -Wall -Wmissing-prototypes
 	CXXFLAGS ?= -O3 -finline-functions -Wall
 endif
 
