working elevator_driver based on ports

--- a/elevator_driver/rebar.config
+++ b/elevator_driver/rebar.config
@@ -3,9 +3,9 @@
 
 {pre_hooks,
   [{"(linux|solaris)", compile, "make -C c_src"},
-   {"(darwin)", compile, "make -C simulator"},
+   {"(darwin)", compile, "make -C c_src"},
    {"(freebsd)", compile, "gmake -C c_src"}]}.
 {post_hooks,
   [{"(linux|solaris)", clean, "make -C c_src clean"},
-   {"(darwin)", clean, "make -C simulator clean"},
+   {"(darwin)", clean, "make -C c_src clean"},
    {"(freebsd)", clean, "gmake -C c_src clean"}]}.
