made elevator driver lightweight

--- a/beastly_elevator/rebar.config
+++ b/beastly_elevator/rebar.config
@@ -1,2 +1,4 @@
 {erl_opts, [debug_info]}.
-{deps, [elevator_driver]}.
+{deps, [
+{elevator_driver, {git, "https://github.com/AndreasVaage/elevator_driver", {branch, "master"}}}
+]}.
