--- a/beastly_elevator/rebar.config
+++ b/beastly_elevator/rebar.config
@@ -1,4 +1,4 @@
 {erl_opts, [debug_info]}.
 {deps, [
-{elevator_driver, {git, "https://github.com/AndreasVaage/elevator_driver", {branch, "dev"}}}
+{elevator_driver, {git, "https://github.com/AndreasVaage/elevator_driver", {branch, "master"}}}
 ]}.
